--- a/src/app/modules/articles/page-article/page-article.component.html
+++ b/src/app/modules/articles/page-article/page-article.component.html
@@ -26,8 +26,8 @@
   <a class="pageArticleBanner" style="background-image: url('/assets/imgs/name1.jpeg');"></a>
   <div class="pageArticleWriting">
     <div *ngFor="let item of data">
-      <app-paragraph *ngIf="item.type === 'PARAGRAPH'" [data]="item"></app-paragraph>
-      <app-paragraph *ngIf="item.type === 'FIGURE'" [data]="item"></app-paragraph>
+      <app-paragraph *ngIf="item.type === 'PARAGRAPH'" [element]="item"></app-paragraph>
+      <!-- <app-figure *ngIf="item.type === 'FIGURE'" [element]="item"></app-figure> -->
     </div>
   </div>
 
