create article routes and update page-article component

--- a/src/app/modules/articles/page-article/figure/figure.component.html
+++ b/src/app/modules/articles/page-article/figure/figure.component.html
@@ -1,1 +1,4 @@
-<figure>{{ element.data }}</figure>
+<figure class="figureElement">
+  <img [src]="element.data">
+  <!-- <figcaption></figcaption> -->
+</figure>
