--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -17,7 +17,7 @@
       <app-grid-article></app-grid-article>
     </div>
   </section>
-  <app-page-article [data]="article"></app-page-article>
+  <!-- <app-page-article [data]="article"></app-page-article> -->
   <section class="itemsList">
     <section class="mostRatedArticles">
       <div class="mostRecentTitle">
