--- a/src/app/modules/articles/page-article/page-article.component.css
+++ b/src/app/modules/articles/page-article/page-article.component.css
@@ -1,13 +1,15 @@
 .pageArticleContainer {
   display: flex;
   flex-direction: column;
-  max-width: 90%;
-  margin-bottom: 1rem;
-  margin: auto;
+  max-width: 50%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pageArticleBanner {
-  width: 90%;
+  width: 100%;
   height: 300px;
   background-position: 50% 50% !important;
   background-repeat: no-repeat;
@@ -67,6 +69,8 @@
   vertical-align: middle;
   margin-left: .5rem;
   padding-top: 1px;
+  font-size: .6rem;
+  color: #757575;
 }
 
 .pageArticleIcon>i {
@@ -74,4 +78,7 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .pageArticleContainer {
+    max-width: 90%;
+  }
 }
