--- a/src/app/modules/articles/page-article/page-article.component.css
+++ b/src/app/modules/articles/page-article/page-article.component.css
@@ -1,9 +1,14 @@
+.pageBorder {
+  width: 100%;
+  -webkit-box-shadow: 0px 0px 10px .2px rgba(0, 0, 0, .1);
+  box-shadow: 0px 0px 10px .2px rgba(0, 0, 0, .1);
+}
 .pageArticleContainer {
   display: flex;
   flex-direction: column;
   max-width: 50%;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 2.5rem;
   margin-left: auto;
   margin-right: auto;
 }
