--- a/src/app/modules/articles/page-article/page-article.component.html
+++ b/src/app/modules/articles/page-article/page-article.component.html
@@ -1,39 +1,41 @@
-<div class="pageArticleContainer">
-  <div class="pageArticleHeader">
-    <div class="pageArticleTitle">
-      <a>
-        <h1>{{ articleData.title }}</h1>
-      </a>
-    </div>
-    <div class="pageArticleInformation">
-      <img class="authorImage" src="/assets/imgs/profile.jpeg">
-      <div class="informations">
-        <div class="pageArticleAuthor">
-          <a>
-            <h2>{{ articleData.author }}</h2>
-          </a>
-        </div>
-        <div class="pageArticleStatus">
-          <span class="pageArticleDate">{{ articleData.date }} - </span>
-          <span class="pageArticleTime">{{ articleData.time_reading }}</span>
-          <span class="pageArticleIcon">
-            <i class="fas fa-star"></i>
-          </span>
+<div class="pageBorder">
+  <div class="pageArticleContainer">
+    <div class="pageArticleHeader">
+      <div class="pageArticleTitle">
+        <a>
+          <h1>{{ articleData.title }}</h1>
+        </a>
+      </div>
+      <div class="pageArticleInformation">
+        <img class="authorImage" src="/assets/imgs/profile.jpeg">
+        <div class="informations">
+          <div class="pageArticleAuthor">
+            <a>
+              <h2>{{ articleData.author }}</h2>
+            </a>
+          </div>
+          <div class="pageArticleStatus">
+            <span class="pageArticleDate">{{ articleData.date }} - </span>
+            <span class="pageArticleTime">{{ articleData.time_reading }}</span>
+            <span class="pageArticleIcon">
+              <i class="fas fa-star"></i>
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <a class="pageArticleBanner" style="background-image: url('/assets/imgs/name1.jpeg');"></a>
-  <div class="pageArticleWriting">
-    <div *ngFor="let item of articleData.elements">
-      <app-paragraph *ngIf="item.type === 'PARAGRAPH'" [element]="item"></app-paragraph>
-      <app-figure *ngIf="item.type === 'FIGURE'" [element]="item"></app-figure>
+    <a class="pageArticleBanner" style="background-image: url('/assets/imgs/name1.jpeg');"></a>
+    <div class="pageArticleWriting">
+      <div *ngFor="let item of articleData.elements">
+        <app-paragraph *ngIf="item.type === 'PARAGRAPH'" [element]="item"></app-paragraph>
+        <app-figure *ngIf="item.type === 'FIGURE'" [element]="item"></app-figure>
+      </div>
     </div>
-  </div>
 
-  <!-- <div class="pageArticleDescription">
-    <a>
-      <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
-    </a>
-  </div> -->
+    <!-- <div class="pageArticleDescription">
+      <a>
+        <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
+      </a>
+    </div> -->
+  </div>
 </div>
