--- a/src/app/modules/articles/page-article/figure/figure.component.css
+++ b/src/app/modules/articles/page-article/figure/figure.component.css
@@ -2,6 +2,7 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+  overflow: hidden;
 }
 .figureElement > img {
   max-height: 300px;
