--- a/src/app/modules/articles/page-article/page-article.component.css
+++ b/src/app/modules/articles/page-article/page-article.component.css
@@ -85,33 +85,46 @@
 
 .pageArticleAside {
   position: fixed;
-  width: 20%;
+  width: 325px;
   margin-top: 10%;
 }
 
-.pageArticleLikes {
+.pageArticleAsideIcons {
   opacity: 0;
   color: #757575;
-  transition: all ease-in-out .5s;
+  transition: all ease-in-out .4s;
 }
 
-.pageArticleLikesActive {
+.pageArticleAsideIconsActive {
   opacity: 1;
   color: #757575;
-  margin-left: 150px;
-  transition: all ease-in-out .5s;
+  margin-left: 160px;
+  transition: all ease-in-out .4s;
 }
 
+.pageArticleLike {
+  margin-bottom: .8rem;
+}
 .pageArticleLikesIcon {
-  font-size: 1.5rem;
-  color: #1976d2;
-  transition: all ease-in-out .5s;
+  margin-left: -1.5px;
+  font-size: 1.4rem;
+  color: #00BFA5;
+  /* color: #1976d2; */
+  transition: all ease-in-out .4s;
 }
 
 .pageArticleLikesText {
   vertical-align: super;
   margin-left: .5rem;
   font-size: .95rem;
+}
+.pageArticleFaceBook {
+  margin-bottom: .8rem;
+}
+.pageArticleFaceBookIcon {
+  cursor: pointer;
+  font-size: 1.4rem;
+  transition: all ease-in-out .4s;
 }
 
 @media only screen and (max-width: 768px) {
