--- a/src/app/modules/articles/page-article/page-article.component.css
+++ b/src/app/modules/articles/page-article/page-article.component.css
@@ -1,7 +1,26 @@
+@-webkit-keyframes pageArticleFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes pageArticleFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .pageBorder {
   width: 100%;
   -webkit-box-shadow: 0px 0px 10px .2px rgba(0, 0, 0, .1);
   box-shadow: 0px 0px 10px .2px rgba(0, 0, 0, .1);
+  animation: pageArticleFadeInOut .3s linear;
 }
 
 .pageArticleContainer {
@@ -105,6 +124,7 @@
 .pageArticleLike {
   margin-bottom: .8rem;
 }
+
 .pageArticleLikesIcon {
   margin-left: -1.5px;
   font-size: 1.4rem;
@@ -118,9 +138,11 @@
   margin-left: .5rem;
   font-size: .95rem;
 }
+
 .pageArticleFaceBook {
   margin-bottom: .8rem;
 }
+
 .pageArticleFaceBookIcon {
   cursor: pointer;
   font-size: 1.4rem;
