--- a/src/app/modules/home/main/main.component.css
+++ b/src/app/modules/home/main/main.component.css
@@ -1,3 +1,20 @@
+@-webkit-keyframes mainFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes mainFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .mainContainer {
   display: flex;
   flex-direction: column;
@@ -5,6 +22,7 @@
   width: 90%;
   margin: auto;
   padding: 2rem;
+  animation: mainFadeInOut .3s linear;
 }
 
 .mostRecentTitle {
