create articleResolver to main component && integrate to backend

--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -3,23 +3,23 @@
   <div class="gridArticleTexts">
     <div class="gridArticleTitle">
       <a>
-        <h1>What Makes a Map Good</h1>
+        <h1>{{ articleBody.title }}</h1>
       </a>
     </div>
     <div class="gridArticleDescription">
       <a>
-        <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
+        <h2>{{ articleBody.brief_description }}</h2>
       </a>
     </div>
     <div class="gridArticleInformation">
       <div class="gridtArticleAuthor">
         <a>
-          <h2>Thiago Luiz Full-stack developer</h2>
+          <h2>{{ articleBody.author }}</h2>
         </a>
       </div>
       <div class="gridArticleStatus">
-        <span class="gridArticleDate">20 May - </span>
-        <span class="gridArticleTime"> 13 min</span>
+        <span class="gridArticleDate">{{ labelDate }} - </span>
+        <span class="gridArticleTime">{{ articleBody.time_reading }} min</span>
         <span class="gridArticleIcon" style="color: #757575; font-size: .6rem;">
           <i class="fas fa-star"></i>
           <!-- <i class="fas fa-clock"></i> -->
