--- a/src/app/modules/articles/grid-article/grid-article.component.css
+++ b/src/app/modules/articles/grid-article/grid-article.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 300px;
+  height: 350px;
   margin: auto;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .gridArticleTexts {
-  margin-top: .5rem;
+  margin-top: 1rem;
 }
 
 .gridArticleTitle>a>h1 {
