update css style

--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -2,7 +2,7 @@
   <section class="mostRecentArticles">
     <div class="mostRecentTitle">
       <h1 class="title">Publicações recentes
-        <span class="icon">
+        <span class="icon" style="color: #00B7FF;">
           <i class="fas fa-chevron-right"></i>
         </span>
       </h1>
@@ -22,7 +22,7 @@
     <section class="mostRatedArticles">
       <div class="mostRecentTitle">
         <h1 class="title">Mais populares
-          <span class="icon">
+          <span class="icon" style="color: #00B7FF;">
             <i class="fas fa-chevron-right"></i>
           </span>
         </h1>
