--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -19,7 +19,7 @@
         <li class="nav-item active">
           <a class="nav-link" (click)="showSearch()">
             <span class="simpleArticleIcon">
-              <i class="fas fa-search"></i>
+              <i class="fas fa-search" style="color: #00B7FF;"></i>
             </span>
           </a>
         </li>
