--- a/src/app/modules/home/main/main.component.css
+++ b/src/app/modules/home/main/main.component.css
@@ -45,12 +45,15 @@
   position: relative;
   font-family: LucidaGrande;
   font-size: 1rem;
-  color: #757575;
+  /* color: #757575; */
+  /* color: #00B7FF; */
+  color: #000;
   transition: all ease-in-out .2s;
 }
 
 .mostRecentArticles .title:hover {
-  color: #1976d2;
+  /* color: #1976d2; */
+  color: #00B7FF;
   /* color: #00BFA5; */
 }
 
@@ -91,12 +94,14 @@
   position: relative;
   font-family: LucidaGrande;
   font-size: 1rem;
-  color: #757575;
+  /* color: #757575; */
+  color: #000;
   transition: all ease-in-out .2s;
 }
 
 .mostRatedArticles .title:hover {
-  color: #1976d2;
+  /* color: #1976d2; */
+  color: #00B7FF;
   /* color: #00BFA5; */
 }
 
