--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -1,4 +1,4 @@
-<div class="simpleArticleContainer">
+<div (click)="simpleArticleClick()" class="simpleArticleContainer">
   <a class="simpleArticleBanner" style="background-image: url('/assets/imgs/name2.png');"></a>
   <div class="simpleArticleTexts">
     <div class="simpleArticleTitle">
