update page article component

--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -1,4 +1,4 @@
-<div class="gridArticleContainer">
+<div (click)="gridArticleClick()" class="gridArticleContainer">
   <a class="gridArticleBanner" style="background-image: url('/assets/imgs/name3.jpg');"></a>
   <div class="gridArticleTexts">
     <div class="gridArticleTitle">
