--- a/src/app/modules/articles/page-article/page-article.component.html
+++ b/src/app/modules/articles/page-article/page-article.component.html
@@ -32,11 +32,11 @@
             </a>
           </div>
           <div class="pageArticleStatus">
-            <span class="pageArticleDate">{{ article.date }} - </span>
-            <span class="pageArticleTime">{{ article.time_reading }} min</span>
-            <span class="pageArticleIcon">
+            <span class="pageArticleDate">{{ labelDate }} - </span>
+            <span class="pageArticleTime">{{ article.time_reading }} de leitura</span>
+            <!-- <span class="pageArticleIcon">
               <i class="fas fa-star"></i>
-            </span>
+            </span> -->
           </div>
         </div>
       </div>
