--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -21,8 +21,9 @@
         <span class="gridArticleDate">{{ labelDate }} - </span>
         <span class="gridArticleTime">{{ articleBody.time_reading }} min</span>
         <span class="gridArticleIcon" style="color: #757575; font-size: .6rem;">
-          <i class="fas fa-star"></i>
-          <!-- <i class="fas fa-clock"></i> -->
+          <!-- <i class="fas fa-star"></i> -->
+          <!-- <i class="fab fa-readme fa-lg" style="color: #757575; width: 20px;"></i> -->
+          <i class="fas fa-book-reader"></i>
         </span>
       </div>
     </div>
