--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -20,8 +20,13 @@
         <span class="rowArticleDate">{{ labelDate }} - </span>
         <span class="rowArticleTime"> {{ articleBody.time_reading }} min</span>
         <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
-          <i class="fas fa-star" style="color: #EFCE4A;"></i>
+          <!-- <i class="fab fa-readme fa-lg" style="color: #EFCE4A;"></i> -->
+          <i class="fas fa-book-reader" style="color: #757575;"></i>
+          <!-- <i class="fas fa-book-reader" style="color: #EFCE4A;"></i> -->
         </span>
+        <!-- <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
+          <i class="fas fa-star" style="color: #EFCE4A;"></i>
+        </span> -->
       </div>
     </div>
   </div>
