--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -16,8 +16,11 @@
         <span class="simpleArticleDate">{{ labelDate }} - </span>
         <span class="simpleArticleTime"> {{ articleBody.time_reading }} min</span>
         <span class="simpleArticleIcon" style="color: #757575; font-size: .6rem;">
-          <i class="fas fa-star"></i>
-          <!-- <i class="fas fa-clock"></i> -->
+          <!-- <i class="fab fa-readme fa-lg" style="color: #757575; width: 20px;"></i> -->
+          <!-- <i class="fas fa-book"></i> -->
+          <!-- <i class="fas fa-book-open"></i> -->
+          <i class="fas fa-book-reader"></i>
+          <!-- <i class="fas fa-star"></i> -->
         </span>
       </div>
     </div>
