--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -26,6 +26,9 @@
             <i class="fas fa-chevron-right"></i>
           </span>
         </h1>
+        <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
+          <i class="fas fa-star" style="color: #EFCE4A; vertical-align: bottom;"></i>
+        </span>
       </div>
       <div *ngFor="let article of topRatedArticles">
         <app-row-article [articleBody]="article" style="margin-bottom: 1rem;"></app-row-article>
