--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link app-home-link" [routerLink]="['/main']">Início<span class="sr-only">(current)</span></a>
+          <a class="nav-link app-home-link" [routerLink]="['/']">Início<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link app-contact-link" [routerLink]="['/contact']">Contato<span
+          <a class="nav-link app-contact-link" [routerLink]="['/contato']">Contato<span
               class="sr-only">(current)</span></a>
         </li>
       </ul>
