--- a/src/app/modules/home/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/home/articles/grid-article/grid-article.component.html
@@ -1,4 +1,4 @@
-<div (click)="gridArticleClick()" class="gridArticleContainer">
+<article (click)="gridArticleClick()" class="gridArticleContainer">
   <a class="gridArticleBanner" style="background-image: url('/assets/imgs/name3.jpg');"></a>
   <div class="gridArticleTexts">
     <div class="gridArticleTitle">
@@ -28,4 +28,4 @@
       </div>
     </div>
   </div>
-</div>
+</article>
