--- a/src/app/modules/home/articles/row-article/row-article.component.html
+++ b/src/app/modules/home/articles/row-article/row-article.component.html
@@ -1,4 +1,4 @@
-<div (click)="rowArticleClick()" class="rowArticleContainer">
+<article (click)="rowArticleClick()" class="rowArticleContainer">
   <div class="rowArticleTexts">
     <div class="rowArticleTitle">
       <a>
@@ -31,4 +31,4 @@
     </div>
   </div>
   <a class="rowArticleBanner" [style.background-image]="'url(\'' + articleBody.banner + '\')'"></a>
-</div>
+</article>
