--- a/src/app/modules/home/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/home/articles/simple-article/simple-article.component.html
@@ -1,4 +1,4 @@
-<div (click)="simpleArticleClick()" class="simpleArticleContainer">
+<article (click)="simpleArticleClick()" class="simpleArticleContainer">
   <a class="simpleArticleBanner" style="background-image: url('/assets/imgs/name2.png');"></a>
   <div class="simpleArticleTexts">
     <div class="simpleArticleTitle">
@@ -25,4 +25,4 @@
       </div>
     </div>
   </div>
-</div>
+</article>
