--- a/src/app/modules/home/articles/page-article/page-article.component.html
+++ b/src/app/modules/home/articles/page-article/page-article.component.html
@@ -1,4 +1,4 @@
-<div class="pageBorder">
+<article class="pageBorder">
   <aside class="pageArticleAside">
     <div [ngClass]="scrollActivated ? 'pageArticleAsideIconsActive' : 'pageArticleAsideIcons'">
       <div class="pageArticleLike">
@@ -55,4 +55,4 @@
       </a>
     </div> -->
   </div>
-</div>
+</article>
