--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -44,7 +44,7 @@
           </a>
           <ul class="dropdown-menu">
             <li class="user-option">
-              <a class="profile-option">Novo artigo</a>
+              <a [routerLink]="['/artigo/escrever']" class="profile-option">Escrever artigo</a>
             </li>
             <li class="user-option">
               <a [routerLink]="['/dashboard/overview']" class="profile-option">Painel</a>
