--- a/src/app/modules/home/articles/create-article/create-article.component.html
+++ b/src/app/modules/home/articles/create-article/create-article.component.html
@@ -1,10 +1,11 @@
 <article class="createArticleContainer">
   <div class="createArticleTitle">
     <span #titleSpan class="createArticleTitleAfter">Título</span>
-    <textarea #titleTextArea data-label="Título" (keydown.enter)="$event.preventDefault()" (keyup)="onKeyTitle($event)"
-    (focus)="focusFunction()" (focusout)="focusOutFunction()" class="createInputTitle" placeholder="Título" cols="40" rows="3" maxlength="104"></textarea>
+    <textarea #titleTextArea data-label="Título" (focus)="focusFunction()" (keydown.enter)="$event.preventDefault()"
+      (focusout)="focusOutFunction()" class="createInputTitle" placeholder="{{ placeHolder }}" cols="40" rows="2"
+      maxlength="75"></textarea>
   </div>
   <div class="createArticleBody">
-    <p data-placeholder="Escrega seu artigo..." class="empty"><br></p>
+    <p data-placeholder="Escrega seu artigo..." class="empty"><br>Escreva seu artigo...</p>
   </div>
 </article>
