--- a/src/app/modules/home/articles/create-article/create-article.component.html
+++ b/src/app/modules/home/articles/create-article/create-article.component.html
@@ -1,11 +1,12 @@
 <article class="createArticleContainer">
-  <div class="createArticleTitle">
-    <span #titleSpan class="createArticleTitleAfter">Título</span>
-    <textarea #titleTextArea data-label="Título" (focus)="focusFunction()" (keydown.enter)="$event.preventDefault()"
-      (focusout)="focusOutFunction()" class="createInputTitle" placeholder="{{ placeHolder }}" cols="40" rows="1"
-      maxlength="120"></textarea>
-  </div>
-  <div class="createArticleBody">
-    <p data-placeholder="Escrega seu artigo..." class="empty"><br>Escreva seu artigo...</p>
-  </div>
+  <section class="createArticleTitle">
+    <span #titleSpan class="titleTextAreaAfter">Título</span>
+    <textarea autosize #titleTextArea data-label="Título" (focus)="focusFunction()"
+      (keydown.enter)="$event.preventDefault()" (focusout)="focusOutFunction()" class="titleTextArea"
+      placeholder="{{ placeHolder }}"></textarea>
+  </section>
+  <section  #articleBodySection class="createArticleBody">
+    <app-textarea textAreaId="paragraphTextArea" textAreaCss="paragraphTextAreaCss" textAreaPlaceHolder="Título">
+    </app-textarea>
+  </section>
 </article>
