create textarea component behavior for dynamic destroy

--- a/src/app/modules/home/articles/create-article/create-article.component.html
+++ b/src/app/modules/home/articles/create-article/create-article.component.html
@@ -5,8 +5,8 @@
       (keydown.enter)="$event.preventDefault()" (focusout)="focusOutFunction()" class="titleTextArea"
       placeholder="{{ placeHolder }}"></textarea>
   </section>
-  <section  #articleBodySection class="createArticleBody">
-    <app-textarea textAreaId="paragraphTextArea" textAreaCss="paragraphTextAreaCss" textAreaPlaceHolder="Título">
-    </app-textarea>
+  <section #articleBodySection class="createArticleBody">
+    <!-- <app-textarea textAreaId="paragraphTextArea" textAreaCss="paragraphTextAreaCss" textAreaPlaceHolder="Título">
+    </app-textarea> -->
   </section>
 </article>
