--- a/src/app/modules/home/header/header.component.html
+++ b/src/app/modules/home/header/header.component.html
@@ -25,7 +25,7 @@
                 <a [routerLink]="['/']" class="profile-option">Início</a>
               </li>
               <li class="user-option">
-                <a class="profile-option">Novo artigo</a>
+                <a [routerLink]="['/artigo/escrever']" class="profile-option">Escrever artigo</a>
               </li>
               <li class="user-option">
                 <a [routerLink]="[ '/dashboard/overview']" class="profile-option">Painel</a>
