--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -1,17 +1,39 @@
+@-webkit-keyframes loginFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loginFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .login {
   background-color: #f8f8f8;
   height: 100%;
+  animation: loginFadeInOut .3s linear;
 }
+
 .login-header {
   padding: 1.5em 2em 1.5em 2em;
   box-sizing: border-box;
   background-color: #1c2d36;
 }
+
 .login-nav {
   /* display: flex;
   justify-content: space-between; */
   text-align: center;
 }
+
 .login-nav-link {
   display: block;
   margin-top: auto;
@@ -21,10 +43,12 @@
   font-size: 1.3em;
   transition: all ease-in-out .3s;
 }
+
 .login-nav-link:hover {
   box-sizing: border-box;
   border-bottom: 1px solid #00ce81;
 }
+
 .login-forms {
   font-family: VarelaRound-Regular;
   /* height: 100%; */
@@ -33,6 +57,7 @@
   background: #fff;
   padding: .5em;
 }
+
 .login-forms .container {
   /* width: 460px; */
   width: 500px;
@@ -40,43 +65,54 @@
   background-color: #fff;
   border-radius: 8px;
 }
+
 .login-title {
   font-family: OpenSans-Bold;
   margin-bottom: 25px;
   font-size: 20px;
   text-align: center;
 }
+
 .login-group {
   display: block;
   margin: auto;
 }
+
 .login-group .input-group {
   margin-bottom: 20px;
 }
+
 .login-group .input-group .form-control {
   font-size: 14px;
   font-family: inherit;
   padding: 25px 20px 25px 20px;
   transition: border-color ease-in-out .3s;
 }
-.login-forms .form-group > button {
+
+.login-forms .form-group>button {
   font-size: 18px;
   border: none;
-  background-color: #00BFA5;;
+  background-color: #00BFA5;
+  ;
   transition: background-color ease-in-out .3s;
 }
-.login-forms .form-group > button:hover {
+
+.login-forms .form-group>button:hover {
   background-color: #009688;
 }
+
 .login-forms input[type='checkbox'] {
   vertical-align: middle;
 }
-.login-forms .form-group > label {
+
+.login-forms .form-group>label {
   font-size: 12px;
 }
+
 .login-group .input-group .form-control:active {
   border-color: linear-gradient(to left, #1976d2, #115293);
 }
+
 .forgot-password {
   text-align: center;
   margin: 0;
@@ -86,15 +122,18 @@
   border-bottom: 1px solid #ccc;
   font-size: 15px;
 }
+
 .register-account {
   text-align: center;
   padding-top: 30px;
   font-size: 15px;
   font-family: OpenSans-Bold;
 }
-.register-account > a {
+
+.register-account>a {
   color: #222326;
 }
+
 .register-btn {
   text-align: center;
   font-size: 18px;
@@ -104,10 +143,12 @@
   box-sizing: border-box;
   transition: all ease-in-out .3s;
 }
+
 .register-btn:hover {
   background-color: #616467;
   color: #fff;
 }
+
 @media only screen and (max-width: 768px) {
   .login-nav {
     flex-direction: column;
