--- a/src/app/modules/signup/signup.component.css
+++ b/src/app/modules/signup/signup.component.css
@@ -1,15 +1,37 @@
+@-webkit-keyframes signupFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes signupFadeInOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .signup {
   background-color: #f8f8f8;
   height: 100%;
+  animation: signupFadeInOut .3s linear;
 }
+
 .signup-header {
   padding: 1.5em 2em 1.5em 2em;
   box-sizing: border-box;
   background-color: #1c2d36;
 }
+
 .signup-nav {
   text-align: center;
 }
+
 .signup-nav-link {
   display: block;
   margin-top: auto;
@@ -19,10 +41,12 @@
   font-size: 1.3em;
   transition: all ease-in-out .3s;
 }
+
 .signup-nav-link:hover {
   box-sizing: border-box;
   border-bottom: 1px solid #00ce81;
 }
+
 .signup-forms {
   font-family: VarelaRound-Regular;
   /* background-image: linear-gradient(to left, #1976d2, #115293); */
@@ -30,6 +54,7 @@
   padding: .5em;
   /* height: 100%; */
 }
+
 .signup-forms .container {
   /* width: 460px; */
   width: 500px;
@@ -37,49 +62,61 @@
   background-color: #fff;
   border-radius: 8px;
 }
+
 .signup-title {
   font-family: OpenSans-Bold;
   margin-bottom: 25px;
   font-size: 20px;
   text-align: center;
 }
+
 .signup-group {
   display: block;
   margin: auto;
 }
+
 .signup-group .input-group {
   margin-bottom: 20px;
 }
+
 .signup-group .input-group .form-control {
   font-size: 14px;
   font-family: inherit;
   padding: 25px 20px 25px 20px;
   transition: border-color ease-in-out .3s;
 }
-.signup-forms .form-group > button {
+
+.signup-forms .form-group>button {
   font-size: 18px;
   border: none;
-  background-color: #00BFA5;;
+  background-color: #00BFA5;
+  ;
   transition: background-color ease-in-out .3s;
 }
-.signup-forms .form-group > button:hover {
+
+.signup-forms .form-group>button:hover {
   background-color: #009688;
 }
+
 .signup-forms input[type='checkbox'] {
   vertical-align: middle;
 }
-.signup-forms .form-group > label {
+
+.signup-forms .form-group>label {
   font-size: 12px;
 }
+
 .signup-group .input-group .form-control:active {
   border-color: linear-gradient(to left, #1976d2, #115293);
 }
+
 .signup-login {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 0px;
   font-size: 15px;
 }
+
 @media only screen and (max-width: 768px) {
   .signup-nav {
     flex-direction: column;
