--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.html
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.html
@@ -1,3 +1,3 @@
-<textarea autosize #textAreaRef class="{{ textAreaCss }}" (focus)="focusFunction()"
-  (focusout)="focusOutFunction()" placeholder="{{ textAreaPlaceHolder }}">
+<textarea autosize #textAreaRef class="titleTextAreaCss" (focus)="focusFunction()"
+  (focusout)="focusOutFunction()">
 </textarea>
