create textarea button

--- a/src/app/modules/home/articles/create-article/create-article.component.html
+++ b/src/app/modules/home/articles/create-article/create-article.component.html
@@ -6,6 +6,11 @@
       placeholder="{{ placeHolder }}"></textarea>
   </section>
   <section #articleBodySection class="createArticleBody">
+    <!-- <button class="buttonBodySection">
+      <span style="color: #fff;">
+        <i class="fas fa-plus"></i>
+      </span>
+    </button> -->
     <!-- <app-textarea textAreaId="paragraphTextArea" textAreaCss="paragraphTextAreaCss" textAreaPlaceHolder="Título">
     </app-textarea> -->
   </section>
