--- a/src/app/modules/home/articles/create-article/create-article.component.css
+++ b/src/app/modules/home/articles/create-article/create-article.component.css
@@ -56,3 +56,22 @@
   transition: all .15s ease;
   margin-left: -100px;
 }
+
+/* .buttonBodySection {
+  margin-left: -60px;
+  width: 35px;
+  height: 35px;
+  background-color: rgba(0, 0, 0, .25);
+  border: none;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 50%;
+  transition: all ease-in-out .3s;
+}
+
+.buttonBodySection:focus {
+  outline: 0;
+} */
