--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.html
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.html
@@ -1,3 +1,9 @@
-<textarea autosize #textAreaRef class="titleTextAreaCss" (focus)="focusFunction()"
-  (focusout)="focusOutFunction()">
-</textarea>
+<div class="textAreaCss">
+  <button>
+    <span style="color: rgba(0, 0, 0, .4);">
+      <i class="fas fa-plus"></i>
+    </span>
+  </button>
+  <textarea autosize #textAreaRef (focus)="focusFunction()" (focusout)="focusOutFunction()">
+  </textarea>
+</div>
