--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -39,7 +39,10 @@
       <ul *ngIf="!showMenu" class="nav navbar-nav">
         <li class="dropdown user user-menu">
           <a class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{{ user.imageUrl }}" class="user-image" alt="User Image">
+            <!-- <img src="{{ user.imageUrl }}" class="user-image" alt="User Image"> -->
+            <span class="user-image" alt="User Image">
+              <i class="fas fa-user"></i>
+            </span>
             <span class="user-name">{{ user.name }}</span>
           </a>
           <ul class="dropdown-menu">
