--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.css
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.css
@@ -8,10 +8,10 @@
   display: inline-block;
   outline-width: 0;
   border: none;
-  font-family: LucidaGrandeBold;
-  font-size: 1.5rem;
+  font-family: LucidaGrande;
+  font-size: 1.3rem;
   resize: none;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 0.84);
 }
 
 .textAreaCss>button {
