--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.html
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.html
@@ -1,9 +1,8 @@
 <div class="textAreaCss">
-  <button>
+  <button #buttonAreaRef>
     <span style="color: rgba(0, 0, 0, .4);">
       <i class="fas fa-plus"></i>
     </span>
   </button>
-  <textarea autosize #textAreaRef (focus)="focusFunction()" (focusout)="focusOutFunction()">
-  </textarea>
+  <textarea autosize #textAreaRef (focus)="focusFunction()" (focusout)="focusOutFunction()"></textarea>
 </div>
