--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.html
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.html
@@ -1,4 +1,4 @@
-<div class="textAreaCss">
+<div #divTextAreaRef class="textAreaCss">
   <button #buttonAreaRef>
     <span style="color: rgba(0, 0, 0, .4);">
       <i class="fas fa-plus"></i>
