fix out side click behavior in chose button

--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.css
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.css
@@ -56,6 +56,6 @@
   transition: all ease-in-out .3s;
 }
 
-.textAreaCss .choseOptionsButton:focus {
+.textAreaCss .selectOptionsButton:focus {
   outline: 0;
 }
